--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "setup-project": "npm i && cd client && npm i",
     "server": "nodemon server",
     "client": "cd client && npm run dev",
-    "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\""
+    "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\"",
+    "build": "npm run build"
   },
   "keywords": [],
   "author": "",
