-App renamed to Infinity Days Tracker. -Created the new project and Cluster in Mongo DB and configured the same in the .env file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daysinceapp",
+  "name": "infinite-daystrakerapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
