reverted the name change in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infinite-daystrakerapp",
+  "name": "daysinceapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
